feat: api auth
